--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,8 +2,18 @@
     list-style: none;
 }
 
-.chat-message {
-    background-color: aqua;
+.chat-message-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+
+    .message {
+        flex: 1;
+    }
 }
 
 footer {
