--- a/templates/home_authenticated.html
+++ b/templates/home_authenticated.html
@@ -15,7 +15,16 @@
     {% else %}
         <ul class="chat">
             {% for message in messages %}
-                <li class="chat-message">{{ message.message }}</li>
+                <li class="chat-message">
+                    <div class="chat-message-card">
+                        <p class="chat-message-time">{{ message.send_time }}</p>
+                        <p class="chat-message-text">{{ message.message }}</p>
+                        <form action="{{ url_for("delete_chat_message") }}" method="post">
+                            <input type="hidden" name="message_id" value="{{ message.id }}">
+                            <button type="submit">Delete</button>
+                        </form>
+                    </div>
+                </li>
             {% endfor %}
         </ul>
     {% endif %}
