--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,12 +5,21 @@
 }
 
 body {
+    background-color: darkslategray;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
     height: 100vh;
     margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+    background-color: aquamarine;
+    border-radius: 8px;
+    padding: 0 8px;
 }
 
 footer {
